Alterações layout issue #4
Ajustes de CSS e HTML
fix imagem de background

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ text-shadow:0px 2px 13px rgba(255, 255, 255, 0.3);
 
 .nav{
 padding: 8px;
+font-size: 15px;
 }
 a:active, a:hover, a:focus{
 background-color:#111111;
@@ -37,7 +38,7 @@ color:#9F0034;
 background-color:transparent;
 }
 body{
-background:url("../img/header-background.png") no-repeat #000000;
+background: url("../img/header-background.jpg") no-repeat scroll 50% 50% #000000;
 
 }
 .navbar-inverse .navbar-nav .agenda > li > a{
@@ -51,6 +52,7 @@ border-color:#000000;
 .navbar-inverse .navbar-nav > li > a:focus{
 color:#FFCC00 !important;
 background-color:transparent;
+font-weight: 900;
 }
 .label-warning{
 background-color:#F6931C;
@@ -84,7 +86,8 @@ margin:3px;
 margin-bottom: auto;
 }
 .list-inline.acompanhe > li {
-    padding: 0;
+padding: 0;
+margin: -2px;
 }
 .sessao{
 background-image:url('../img/sessao.png');
@@ -336,7 +339,7 @@ border-color:#FF5154;
 padding:0px 20px;
 }
 .navbar-collapse{
-max-height:440px !important;
+max-height:486px !important;
 }
 .agenda .panel-body{
 /* IE9 SVG, needs conditional override of 'filter' to 'none' */
@@ -502,7 +505,7 @@ text-align:right;
 .fbFriendFaces{
         border: none;
         visibility: visible;
-        width: 400px;
+        width: 391px;
         height: 150px;
         position: relative;
         overflow: hidden;
@@ -524,7 +527,12 @@ text-align:right;
 
 .cycle-slideshow { 
   width: auto; 
-  margin:10% 2% 0% 2%; 
+  margin:5% 2% 0% 2%; 
+}
+
+.cycle-slide {
+    background-color: #333333;
+    padding: 5px;
 }
 
 .cycle-slideshow img { 
